# Project-TAV

./: .gitattributes  README.md
backend/: pyproject.toml  run.py
backend/app/: __init__.py  routes.py
matlab/: grayscale_image.m
matlab/TP10/: TFCT.m  app_sampling.m  compression.m  compression_avance.m  compression_decimation.m  etirement_temporel.m  exercice_1.m  exercice_3.m  passe_bas.m  passe_haut.m
matlab/TP11/: appariement.m  exercice_1.m  exercice_2.m  extrait.m  parametres.m  parametres.mat  pics_spectraux.m  recherche_avancee.m  recherche_simplifiee.m  shazam.m
matlab/TP5/: base64ToImage.m  d_min.asv  d_min.m  debruitage.m  exercice_3.m  exercice_3_bis.m  inpainting.m  patch_inpainting.m  rapiecage.m
matlab/TP6/: GVF.m  exercice_1.m  exercice_2.m  iteration.m  matrice_A.m
matlab/TP8/: TV_Hilbert.m  debruitage.m  exercice_0.m  exercice_1.m  exercice_1_bis.m  exercice_2.m
tav-app/: package-lock.json  package.json
tav-app/src/: App.css  App.js  Header.css  Header.js  ImageUploader.js  TP.css  TP.js  Tp10DropZone.css  Tp10DropZone.js  Tp11Zone.css  Tp11Zone.js  Tp5DropZone.js  TpImages.css  TpImages.js  TpInfos.js  TpPage.css  TpPage.js
