[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["antonin-tarrade <antotarrade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
flask = "^3.0.3"
werkzeug = "^3.0.3"
matlab = "^0.1"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
matlabengine = "9.13.1"
flask-cors = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
